<resources>
    <string name="app_name">ChatApp</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="go_back">Go Back</string>
    <string name="request_new_password">
        Request<br />
        New<br />
        Password</string>
    <string name="btn_submit_request">Submit Request</string>
    <string name="change_password">Change<br />Password</string>
    <string name="return_to_login">Return to login</string>
    <string name="submit">Submit</string>
    <string name="logo">logo</string>
    <string name="evErrorMessage">%s can not be empty.</string>
    <string name="api_failure">Api cannot answer, please try again.</string>
    <string name="chat_rooms">Chat Rooms</string>
    <string name="users">Users</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="user_image">user image</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</string>
    <string name="create">Create</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="make_private">Make Private</string>
    <string name="selected_user">Selected Users %d/%d</string>
    <string name="filter_user">Filter Users</string>
    <string name="create_edit">Create/Edit</string>
    <string name="create_room">Create Room</string>
    <string name="edit_room">Edit Room</string>
    <string name="chat_room">Chat Room</string>
    <string name="content_description_search">search</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="chat_room_updated_successfully">Chat Room Updated Successfully</string>
    <string name="chat_room_updated_failed">Chat Room cannot Updated</string>
    <string name="delete">Delete</string>
    <string name="chat_room_deleted_successfully">Chat Room deleted successfully</string>
    <string name="chat_room_cannot_deleted">Chat Room cannot deleted</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter Message</string>
    <string name="icon">icon</string>
    <string name="cannot_find_user">Cannot find user.</string>
    <string name="join_room">%s joined the room</string>
    <string name="channel_name">Receive Message</string>
    <string name="channel_description">Receving Message from another person</string>
</resources>