<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LoginFragment">

    <ImageView
        android:id="@+id/ivUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/user_name"
        app:layout_constraintBottom_toTopOf="@+id/tvUserName"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintVertical_chainStyle="packed"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/ivUser"
        tools:text="UserName" />

    <Button
        android:id="@+id/btnChatRooms"
        style="@style/MyButton"
        android:text="@string/chat_rooms"
        app:layout_constraintBottom_toTopOf="@+id/btnUsers"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName"
        app:layout_constraintVertical_chainStyle="packed" />


    <Button
        android:id="@+id/btnUsers"
        style="@style/MyButton"
        android:text="@string/users"
        app:layout_constraintBottom_toTopOf="@+id/btnSettings"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/btnChatRooms" />


    <Button
        android:id="@+id/btnSettings"
        style="@style/MyButton"
        android:text="@string/settings"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/btnUsers" />

    <Button
        android:id="@+id/btnLogout"
        style="@style/MyLogoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_rooms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>