<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/menu_chat_room"
                app:navigationIcon="@drawable/ic_back"
                app:title="@string/create_edit" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/evName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:layout_constraintBottom_toTopOf="@+id/evDescription"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/evDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:layout_marginTop="4dp"
                app:layout_constraintBottom_toTopOf="@+id/switchPrivate"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/evName">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchPrivate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/make_private"
                app:layout_constraintBottom_toTopOf="@+id/selectUser"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/evDescription" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/selectUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/selectedUserInfo"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/switchPrivate" />

            <TextView
                android:id="@+id/selectedUserInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selected_user"
                app:layout_constraintBottom_toTopOf="@+id/btnCreateEdit"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/selectUser" />

            <Button
                android:id="@+id/btnCreateEdit"
                style="@style/MyButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/selectedUserInfo"
                tools:text="@string/create_edit" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>